--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <title>Assignment-09</title>
     <style>
+        body{
+            background-color: black;
+        }
         .light {
             width: 150px;
             height: 80px;
-            border: 1px solid black;
+            border: 1px solid white;
             display: flex;
             justify-content: center;
             border-radius: 5px;
             margin: 5px;
+            background-color: white;
         }
         #light-panel{
             margin-top: 350px;
@@ -25,16 +29,39 @@
             height: 100%;
         }
         #button-panel>button{
-            width: 150px;
-            height: 30px;
-            margin-top: 20px;
+            width: 200px;
+            height: 40px;
+            margin-top: 70px;
             margin-left: 200px;
             border-radius: 10px;
-            border: 2px solid darkred;
+            border: 4px solid white;
             background-color: black;
             color: white;
             font-weight: bold;
         }
+
+        #line{
+            position: absolute;
+        }
+        #up-line{
+            width: 1000px;
+            height:2px;
+            background-color: white;
+            margin-top: -220px;
+        }
+       #down-line{
+            width: 1000px;
+            height: 2px;
+            background-color: white;
+           margin-top: 120px;
+        }
+       #topic{
+           color: darkred;
+           font-size: 40px;
+           font-weight: bold;
+           margin-top: -200px;
+           margin-left: 300px;
+       }
 
 
     </style>
@@ -52,6 +79,11 @@
     <section id="button-panel">
         <button id="start">Start</button>
         <button id="stop">Stop</button>
+    </section>
+    <section id="line">
+        <div id="up-line"></div>
+        <div id="down-line"></div>
+        <div id="topic">JavaScript Knight Rider</div>
     </section>
 
 </section>
